# oz_01_collabo-008

./: README.md
client/: .env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
client/.vercel/: project.json
client/src/: App.tsx  app.css.ts  index.css  main.tsx
client/src/Components/: SideMenu.tsx
client/src/Components/BaseContainer/: BaseContainer.css.ts  BaseContainer.tsx
client/src/Components/BudgetNExpensesTables/: BudgetHistoryTableCell.css.ts  BudgetHistoryTableCell.tsx  ExpensesRegiTableCell.css.ts  ExpensesRegiTableCell.tsx
client/src/Components/BudgetRegTable/: BudgetRegTable.css.ts  BudgetRegTable.tsx
client/src/Components/Charts/: BarChart.tsx  DoughnutChartCategory.tsx  DoughnutChartPlace.tsx
client/src/Components/ExpendituresList/: ExpenditureList.tsx
client/src/Components/Header/: Header.css.ts  Header.tsx
client/src/Pages/: Signup.css.ts  Signup.tsx
client/src/Pages/Login/: Login.tsx  (+1 more)
client/src/api/: axios.ts  budgetRegRequest.ts  categoriesRequest.ts  expenseRequest.ts  fixedRequest.ts  monthlyRequest.ts  requests.ts
client/src/constants/: components-contants.js  components-contants.ts
client/src/mocks/: handlers.ts
client/src/store/: useBudgetStore.ts
server/: .deploy.env  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
server/budgets/: admin.py  models.py  serializers.py  urls.py  views.py
server/bugets/: apps.py
server/config/: settings.py  urls.py
server/expenses/: admin.py  models.py  serializers.py  urls.py  views.py
server/members/: admin.py  models.py  serializers.py  urls.py  views.py
server/nginx/: django.conf
server/reports/: serializers.py  urls.py  views.py
(+61 files in other folders)
