[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["SwanyCastle <seunghwan712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.15.1"
mysqlclient = "^2.2.4"
drf-spectacular = "^0.27.1"
black = "^24.3.0"
mypy = "^1.9.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
