[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["SwanyCastle <seunghwan712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.15.1"
mysqlclient = "^2.2.4"
drf-spectacular = "^0.27.1"
black = "^24.3.0"
mypy = "^1.9.0"
django-environ = "^0.11.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
boto3 = "^1.34.85"
ncloud-sdk = "^1.1.9"
pillow = "^10.3.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
